--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -25,6 +25,7 @@
 			<li class="twitter"><a href="http://www.twitter.com/lyralemos" target="_blank">Twitter</a></li>
 			<li class="facebook"><a href="http://www.facebook.com/lyralemos" target="_blank">Facebook</a></li>
 			<li class="linkedin"><a href="https://www.linkedin.com/profile/view?id=14762379" target="_blank">Linkedin</a></li>
+			<li class="rss"><a href="{% url 'rss' %}" target="_blank">RSS</a></li>
 		</ul>
 		<div id="by">por Alexandre Marinho - 2014</div>
 	</footer>
