--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -8,6 +8,16 @@
 	<link rel="shortcut icon" href="{% static 'core/favicon.ico' %}" type="image/x-icon" />
 	<link href='http://fonts.googleapis.com/css?family=Kreon|Cantarell|Fjalla+One' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="{% static 'core/css/almarinho.css' %}" />
+	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.2/styles/default.min.css">
+	<script src="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.2/highlight.min.js"></script>
+	<script>
+		window.onload = function() {
+		    var aCodes = document.getElementsByTagName('pre');
+		    for (var i=0; i < aCodes.length; i++) {
+		        hljs.highlightBlock(aCodes[i]);
+		    }
+		};
+	</script>
 </head>
 <body>
 	<div id="header" class="clearfix">
