--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -5,7 +5,29 @@
 	<title>Alexandre Marinho</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="shortcut icon" href="{% static 'core/favicon.ico' %}" type="image/x-icon" />
+	<link rel="shortcut icon" href="{% static 'core/favicons/favicon.ico' %}" />
+	<link rel="apple-touch-icon" sizes="57x57" href="{% static 'core/favicons/apple-touch-icon-57x57.png' %}">
+	<link rel="apple-touch-icon" sizes="114x114" href="{% static 'core/favicons/apple-touch-icon-114x114.png' %}">
+	<link rel="apple-touch-icon" sizes="72x72" href="{% static 'core/favicons/apple-touch-icon-72x72.png' %}">
+	<link rel="apple-touch-icon" sizes="144x144" href="{% static 'core/favicons/apple-touch-icon-144x144.png' %}">
+	<link rel="apple-touch-icon" sizes="60x60" href="{% static 'core/favicons/apple-touch-icon-60x60.png' %}">
+	<link rel="apple-touch-icon" sizes="120x120" href="{% static 'core/favicons/apple-touch-icon-120x120.png' %}">
+	<link rel="apple-touch-icon" sizes="76x76" href="{% static 'core/favicons/apple-touch-icon-76x76.png' %}">
+	<link rel="apple-touch-icon" sizes="152x152" href="{% static 'core/favicons/apple-touch-icon-152x152.png' %}">
+	<link rel="apple-touch-icon" sizes="180x180" href="{% static 'core/favicons/apple-touch-icon-180x180.png' %}">
+	<link rel="icon" type="image/png" href="{% static 'core/favicons/favicon-192x192.png" sizes="192x192' %}">
+	<link rel="icon" type="image/png" href="{% static 'core/favicons/favicon-160x160.png" sizes="160x160' %}">
+	<link rel="icon" type="image/png" href="{% static 'core/favicons/favicon-96x96.png" sizes="96x96' %}">
+	<link rel="icon" type="image/png" href="{% static 'core/favicons/favicon-16x16.png" sizes="16x16' %}">
+	<link rel="icon" type="image/png" href="{% static 'core/favicons/favicon-32x32.png" sizes="32x32' %}">
+
+	<meta name="msapplication-TileColor" content="#333333">
+	<meta name="msapplication-TileImage" content="{% static 'core/favicons/mstile-144x144.png' %}">
+	<meta name="msapplication-square70x70logo" content="{% static 'core/favicons/mstile-70x70.png' %}">
+	<meta name="msapplication-square150x150logo" content="{% static 'core/favicons/mstile-150x150.png' %}">
+	<meta name="msapplication-square310x310logo" content="{% static 'core/favicons/mstile-310x310.png' %}">
+	<meta name="msapplication-wide310x150logo" content="{% static 'core/favicons/mstile-310x150.png' %}">
+
 	<link href='http://fonts.googleapis.com/css?family=Kreon|Cantarell|Fjalla+One' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="{% static 'core/css/almarinho.css' %}" />
 	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.2/styles/default.min.css">
