--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -15,11 +15,11 @@
 	<link rel="apple-touch-icon" sizes="76x76" href="{% static 'core/favicons/apple-touch-icon-76x76.png' %}">
 	<link rel="apple-touch-icon" sizes="152x152" href="{% static 'core/favicons/apple-touch-icon-152x152.png' %}">
 	<link rel="apple-touch-icon" sizes="180x180" href="{% static 'core/favicons/apple-touch-icon-180x180.png' %}">
-	<link rel="icon" type="image/png" href="{% static 'core/favicons/favicon-192x192.png" sizes="192x192' %}">
-	<link rel="icon" type="image/png" href="{% static 'core/favicons/favicon-160x160.png" sizes="160x160' %}">
-	<link rel="icon" type="image/png" href="{% static 'core/favicons/favicon-96x96.png" sizes="96x96' %}">
-	<link rel="icon" type="image/png" href="{% static 'core/favicons/favicon-16x16.png" sizes="16x16' %}">
-	<link rel="icon" type="image/png" href="{% static 'core/favicons/favicon-32x32.png" sizes="32x32' %}">
+	<link rel="icon" type="image/png" sizes="192x192" href="{% static 'core/favicons/favicon-192x192.png' %}">
+	<link rel="icon" type="image/png" sizes="160x160" href="{% static 'core/favicons/favicon-160x160.png' %}">
+	<link rel="icon" type="image/png" sizes="96x96" href="{% static 'core/favicons/favicon-96x96.png' %}">
+	<link rel="icon" type="image/png" sizes="16x16" href="{% static 'core/favicons/favicon-16x16.png' %}">
+	<link rel="icon" type="image/png" sizes="32x32" href="{% static 'core/favicons/favicon-32x32.png' %}">
 
 	<meta name="msapplication-TileColor" content="#333333">
 	<meta name="msapplication-TileImage" content="{% static 'core/favicons/mstile-144x144.png' %}">
